archive/toobfuzzer3/blueprints/esp32-c6/run_6/terminal_output.txt
[GENERATE] Blueprint 6 successfully persisted to c:\Users\Robin\Desktop\Toob-Loader\archive\toobfuzzer3\blueprints\esp32-c6\run_6\blueprint.json
[GENERATE] Confidence matrix saved to c:\Users\Robin\Desktop\Toob-Loader\archive\toobfuzzer3\blueprints\esp32-c6\run_6\confidence.json

[PING PHASE] [COMPILE] Invoking Universal Toolchain Runner for esp32-c6...
[PING PHASE] [*] Compiling JSON Blueprint to Toolchain Syntax & C Profiles...
[*] Generated Linker Script: c:\Users\Robin\Desktop\Toob-Loader\archive\toobfuzzer3\build\esp32-c6\run_latest\esp32-c6.ld
[*] Generated Startup Assembly: c:\Users\Robin\Desktop\Toob-Loader\archive\toobfuzzer3\build\esp32-c6\run_latest\esp32-c6_startup.S
[*] Generated Capabilities Shim: c:\Users\Robin\Desktop\Toob-Loader\archive\toobfuzzer3\build\esp32-c6\run_latest\capabilities_esp32-c6.c
[*] Generated True Physical SPI Flash HAL: c:\Users\Robin\Desktop\Toob-Loader\archive\toobfuzzer3\build\esp32-c6\run_latest\hal_flash_esp32-c6.c
[*] Emitted: esp32-c6.ld | esp32-c6_startup.S | capabilities_esp32-c6.c
[*] ToolLocator loaded 81 custom paths (max_depth=6) from user_tools.json

=== STAGE 1: COMPILATION ===
[*] Preparing execution for: riscv32-esp-elf-gcc
[*] Tool 'riscv32-esp-elf-gcc' not in PATH. Searching common vendor directories (Max Depth: 6)...
    [+] Found at: C:\Espressif\tools\riscv32-esp-elf\esp-14.2.0_20251107\riscv32-esp-elf\bin\riscv32-esp-elf-gcc.exe
    [>] Executing: "C:\Espressif\tools\riscv32-esp-elf\esp-14.2.0_20251107\riscv32-esp-elf\bin\riscv32-esp-elf-gcc.exe" -O2 -nostdlib -ffreestanding -DHAS_TRUE_SPI_HAL=1 -T build/esp32-c6/run_latest/esp32-c6.ld -I core/ -I arch/ -I build/esp32-c6/run_latest/ -I build/esp32c6/run_latest/ -o build/esp32-c6/run_latest/toobfuzzer.bin.elf c:\Users\Robin\Desktop\Toob-Loader\archive\toobfuzzer3\core\detect_profile.c c:\Users\Robin\Desktop\Toob-Loader\archive\toobfuzzer3\core\fuzzer_main.c c:\Users\Robin\Desktop\Toob-Loader\archive\toobfuzzer3\core\logger.c c:\Users\Robin\Desktop\Toob-Loader\archive\toobfuzzer3\core\prober_core.c  c:\Users\Robin\Desktop\Toob-Loader\archive\toobfuzzer3\hal\hal_uart.c c:\Users\Robin\Desktop\Toob-Loader\archive\toobfuzzer3\build/esp32-c6/run_latest/capabilities_esp32-c6.c c:\Users\Robin\Desktop\Toob-Loader\archive\toobfuzzer3\build/esp32-c6/run_latest/esp32-c6_startup.S c:\Users\Robin\Desktop\Toob-Loader\archive\toobfuzzer3\build/esp32c6/run_latest/keelhaul_svd.c c:\Users\Robin\Desktop\Toob-Loader\archive\toobfuzzer3\build/esp32-c6/run_latest/hal_flash_esp32-c6.c
    [!] Execution Failed (Exit 1)
    [!] STDERR: c:\Users\Robin\Desktop\Toob-Loader\archive\toobfuzzer3\build/esp32-c6/run_latest/hal_flash_esp32-c6.c: In function 'chip_flash_erase':
c:\Users\Robin\Desktop\Toob-Loader\archive\toobfuzzer3\build/esp32-c6/run_latest/hal_flash_esp32-c6.c:15:17: error: 'UNKNOWN_ADDRESS' undeclared (first use in this function)
   15 |     ((void(*)())UNKNOWN_ADDRESS)();
      |                 ^~~~~~~~~~~~~~~
c:\Users\Robin\Desktop\Toob-Loader\archive\toobfuzzer3\build/esp32-c6/run_latest/hal_flash_esp32-c6.c:15:17: note: each undeclared identifier is reported only once for each function it appears in
c:\Users\Robin\Desktop\Toob-Loader\archive\toobfuzzer3\build/esp32-c6/run_latest/hal_flash_esp32-c6.c: In function 'chip_flash_write32':
c:\Users\Robin\Desktop\Toob-Loader\archive\toobfuzzer3\build/esp32-c6/run_latest/hal_flash_esp32-c6.c:28:17: error: 'UNKNOWN_ADDRESS' undeclared (first use in this function)
   28 |     ((void(*)())UNKNOWN_ADDRESS)();
      |                 ^~~~~~~~~~~~~~~
[!] Compilation Failed.
    [?] To trigger the AI Self-Healing loop, implement error parsing here.
[*] Restarting application...
